--- a/Homework/app/src/main/res/layout/activity_ch3ex3.xml
+++ b/Homework/app/src/main/res/layout/activity_ch3ex3.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Ch3Ex3Activity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/tab"/>
+
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/Viewpager"/>
+
+    </LinearLayout>
 </FrameLayout>
